<resources>

  <string name="app_name">eCommerce</string>
  <string name="title_activity_home">HomeActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>
  <string name="title_activity_home2">Home2Activity</string>
  <string name="title_activity_seller_home">SellerHomeActivity</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>

</resources>
