<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home"
  tools:ignore="UnusedNavigation">

  <activity
    android:id="@+id/nav_home"
    android:label="@string/menu_home"
    android:name="id.kardihaekal."
    tools:layout="@layout/content_home" />

  <activity
    android:id="@+id/nav_cart"
    android:label="@string/menu_gallery"
    android:name="id.kardihaekal."
    tools:layout="@layout/activity_cart" />

  <activity
    android:id="@+id/nav_search"
    android:label="@string/menu_slideshow"
    android:name="id.kardihaekal."
    tools:layout="@layout/activity_search_products" />

  <activity
    android:id="@+id/nav_settings"
    android:label="@string/menu_tools"
    android:name="id.kardihaekal."
    tools:layout="@layout/activity_settings" />

  <activity
    android:id="@+id/nav_categories"
    android:label="@string/menu_share"
    android:name="id.kardihaekal."
    tools:layout="@layout/activity_seller_product_category" />

  <activity
    android:id="@+id/nav_logout"
    android:label="@string/menu_send"
    android:name="id.kardihaekal."
    tools:layout="@layout/activity_login" />
</navigation>